things seem to work now, circular dependency fixed